# cs-562-jvm

./: .gitignore  CMakeLists.txt  README.md  attributes.c  attributes.h  bytecode_interpreter.c  bytecode_interpreter.h  classfile.c  classfile.h  classloader.c  classloader.h  constantpool.c  constantpool.h  dataTypes.c  dataTypes.h  flags.h  garbage_collection.h  gc.c  gc.h  hashmap.c  hashmap.h  header-gen.py  heap.c  heap.h  indirection.c  indirection.h  indirection_impl.h  javaBytecode.csv  jlock.c  jlock.h  jthread.c  jthread.h  jvmSettings.c  jvmSettings.h  main.c  mm.c  mm.h  object.c  object.h  opcodes.h  (+4 more)
